# market_int

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  job.yaml
.cargo/: config.toml
.zed/: debug.json
data/: data.db  symbols.csv
docs/: backtest-pipeline.md  lessons.md  perform-all-pipeline.md  put-selection-guide-telegram-cn.txt  put-selection-guide-telegram.txt  put-selection-guide.md
docs/plans/: 2026-05-05-put-scoring-design.md  2026-05-05-put-scoring-implementation.md  2026-05-05-put-scoring-progress.md  2026-05-09-csv-simplify-progress.md  2026-05-09-earnings-momentum-telegram-implementation.md  2026-05-09-earnings-momentum-telegram-progress.md  2026-05-13-deduplicate-toppicks-implementation.md  2026-05-13-deduplicate-toppicks-progress.md  2026-05-16-market-regime-implementation.md  2026-05-16-market-regime-progress.md  2026-05-16-sector-diversity-implementation.md  2026-05-16-sector-diversity-progress.md  2026-05-16-strike-tightening-and-ror-filter-progress.md  2026-05-16-trend-filter-design.md  2026-05-16-trend-filter-progress.md  2026-05-22-backtest-design.md  2026-05-22-backtest-implementation.md  2026-05-22-backtest-progress.md  2026-05-22-production-config-update-progress.md  2026-06-07-collapse-metrics-pipeline-implementation.md  2026-06-07-collapse-metrics-pipeline-progress.md  2026-07-03-put-score-max-drop-safety-decisions.md  2026-07-18-backtest-earnings-alignment-decisions.md  2026-07-18-backtest-earnings-alignment-verification-report.md  2026-07-18-earnings-aware-put-scoring-decisions.md  2026-07-18-earnings-aware-put-scoring-verification-report.md
docs/plans/completed/: 2026-05-05-put-scoring-progress.md  2026-05-09-csv-simplify-implementation.md  2026-05-09-csv-simplify-progress.md  2026-05-09-earnings-momentum-telegram-design.md  2026-05-13-deduplicate-toppicks-progress.md  2026-05-16-market-regime-design.md  2026-05-16-market-regime-progress.md  (+13 more)
sqlite/: db.sqlite  db.sqlite-shm  db.sqlite-wal
src/: atr.rs  backtest.rs  calc_atr.rs  constants.rs  dropbox.rs  experiments.rs  main.rs  maxdrop.rs  metrics.rs  model.rs  option.rs  price_percentile.rs  pull_option.rs  pull_quotes.rs  quotes.rs  regime.rs  sectors.rs  sharpe.rs  stats.rs  symbols.rs  trend.rs
src/http/: client.rs
src/marketdata/: api_caller.rs  client.rs  response.rs  result.rs
src/store/: candle.rs  earnings.rs  max_drop.rs  option_chain.rs  price_percentile.rs  sharpe_ratio.rs  sqlite.rs  trend.rs  true_range.rs
src/tiger/: api_caller.rs
