[package]
name = "market_int"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12.0", features = ["full"] }
url = "1"
dotenv = "0.15"
lazy_static = "1.4"
thiserror = "1"
chrono = "0.4.38"
rusqlite = { version = "0.32.1", features = ["bundled"] }
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
csv = "1.3.0"
telegram-bot-api = "0.1.0"